# masterclass-project

./: Dockerfile  README.md  docker-compose.yml
docker/: Dockerfile
docker/ros2_numpy/: setup.py
ros2_ws/src/hole_detector/: CMakeLists.txt  package.xml
ros2_ws/src/hole_detector/launch/: hole_detector.launch.py  hole_detector_real.launch.py  hole_detector_sim.launch.py
ros2_ws/src/hole_detector/scripts/: holedetector.py  holedetector_real.py  holedetector_sim.py  holedetector_sim_pc.py
ros2_ws/src/hole_detector/srv/: HoleCoordinates.srv
ros2_ws/src/pick_and_place/: CMakeLists.txt  package.xml
ros2_ws/src/pick_and_place/launch/: pick_and_place_perception_real.launch.py  pick_and_place_perception_sim.launch.py
ros2_ws/src/pick_and_place/src/: pick_and_place_perception.cpp  pick_and_place_perception_sim.cpp
ros2_ws/src/robotnik_sensors/urdf/: intel_r430.urdf.xacro
ros2_ws/src/the_construct_office_gazebo/: CMakeLists.txt
ros2_ws/src/the_construct_office_gazebo/launch/: starbots_ur3e.launch.xml  start_world.launch.py
ros2_ws/src/the_construct_office_gazebo/models/barista_model/: model.config  model.sdf
ros2_ws/src/the_construct_office_gazebo/models/wall/: model.config  model.sdf
ros2_ws/src/the_construct_office_gazebo/worlds/: starbots_complete.world  starbots_complete_original.world
ros2_ws/src/ur_arm/my_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/ur_arm/my_moveit_config/config/: name.srdf  ompl_planning.yaml
ros2_ws/src/ur_arm/my_moveit_config/launch/: move_group.launch.py
ros2_ws/src/ur_arm/my_moveit_config/scenes/: coffee_shop.scene
ros2_ws/src/ur_arm/real_my_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/ur_arm/real_my_moveit_config/config/: moveit.rviz  moveit_controllers.yaml  moveit_cpp.yaml  name.ros2_control.xacro  name.srdf  name.urdf.xacro  ompl_planning.yaml
ros2_ws/src/ur_arm/real_my_moveit_config/launch/: demo.launch.py  move_group.launch (copy).py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/ur_arm/rg2_gripper_description/urdf/: rg2_gripper_gz.ros2_control.xacro
ros2_ws/src/ur_arm/robotnik_sensors/urdf/: intel_r430.urdf.xacro
ros2_ws/src/ur_arm/ur_description/: CMakeLists.txt
ros2_ws/src/ur_arm/ur_description/urdf/: ur.urdf.xacro
ros2_ws/src/ur_openai/: ur3env.py
webapp/: app.js  index.html
webpage_ws/: app.js  styles.css
(+1 files in other folders)
